--- a/views/index.ejs
+++ b/views/index.ejs
@@ -48,6 +48,7 @@
         <li><code>/resources?authorId=1</code> - Filter resources by authorId</li>
       </ul>
       <div class="method">POST</div>
+      <a href="http://localhost:3000/form">Submit a new resource through this form</a>
       <ul>
         <li><code>/resources</code> - Create a new resource</li>
       
