--- a/views/postResource.ejs
+++ b/views/postResource.ejs
@@ -6,6 +6,42 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
+    <div class="div-con">
+      <nav class="navbar">
+        <ul class="nav-links">
+          <li class="nav-link">
+            <a href="http://localhost:3000/">HOME</a>
+          </li>
+          <li class="nav-link services">
+            <a href="">RESOURCES 📚</a>
+            <ul class="drop-down">
+              <li>POST</li>
+              <li>GET</li>
+              <li>PATCH</li>
+              <li>DELETE</li>
+            </ul>
+          </li>
+          <li class="nav-link services">
+            <a href="">USERS 👨🏻‍💻</a>
+            <ul class="drop-down">
+              <li>POST</li>
+              <li>GET</li>
+              <li>PATCH</li>
+              <li>DELETE</li>
+            </ul>
+          </li>
+          <li class="nav-link services">
+            <a href="">COMMENTS 📝</a>
+            <ul class="drop-down">
+              <li>POST</li>
+              <li>GET</li>
+              <li>PATCH</li>
+              <li>DELETE</li>
+            </ul>
+          </li>
+        </ul>
+      </nav>
+    </div>
     <h1>Create a New Resource</h1>
 
     <form method="POST" action="/resources">
