finished with the extra credit

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,28 +19,27 @@
           <li class="nav-link services">
             <a href="">RESOURCES 📚</a>
             <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
+              <li><a href="http://localhost:3000/postResource">POST</a></li>
+              <li><a href="http://localhost:3000/resources">GET</a></li>
+              
             </ul>
           </li>
           <li class="nav-link services">
             <a href="">USERS 👨🏻‍💻</a>
             <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
+              <li><a href="http://localhost:3000/postUser">POST</a></li>
+              <li><a href="http://localhost:3000/users">GET</a></li>
+             
+              
             </ul>
           </li>
           <li class="nav-link services">
             <a href="">COMMENTS 📝</a>
             <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
+           
+              <li><a href="http://localhost:3000/comments">GET</a></li>
+          
+           
             </ul>
           </li>
         </ul>
