--- a/public/index.css
+++ b/public/index.css
@@ -52,8 +52,15 @@ button {
 .div-con {
   display: flex;
   font-size: 14px;
-  height: auto;
+
   background: #f4f4f4;
+
+  position: fixed;
+  top: 0;
+  left: 0;
+  z-index: 999;
+  width: 100%;
+  height: 23px;
 }
 
 .navbar {
