--- a/views/postResource.ejs
+++ b/views/postResource.ejs
@@ -6,71 +6,79 @@
     <link rel="stylesheet" href="/styles.css" />
   </head>
   <body>
-    <div class="div-con">
-      <nav class="navbar">
-        <ul class="nav-links">
-          <li class="nav-link">
-            <a href="http://localhost:3000/">HOME</a>
-          </li>
-          <li class="nav-link services">
-            <a href="">RESOURCES 📚</a>
-            <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
-            </ul>
-          </li>
-          <li class="nav-link services">
-            <a href="">USERS 👨🏻‍💻</a>
-            <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
-            </ul>
-          </li>
-          <li class="nav-link services">
-            <a href="">COMMENTS 📝</a>
-            <ul class="drop-down">
-              <li>POST</li>
-              <li>GET</li>
-              <li>PATCH</li>
-              <li>DELETE</li>
-            </ul>
-          </li>
-        </ul>
-      </nav>
+    <body>
+      <div class="div-con">
+        <nav class="navbar">
+          <ul class="nav-links">
+            <li class="nav-link">
+              <a href="http://localhost:3000/">HOME</a>
+            </li>
+            <li class="nav-link services">
+              <a href="">RESOURCES 📚</a>
+              <ul class="drop-down">
+                <li><a href="http://localhost:3000/postResource">POST</a></li>
+                <li><a href="http://localhost:3000/resources">GET</a></li>
+                
+              </ul>
+            </li>
+            <li class="nav-link services">
+              <a href="">USERS 👨🏻‍💻</a>
+              <ul class="drop-down">
+                <li><a href="http://localhost:3000/postUser">POST</a></li>
+                <li><a href="http://localhost:3000/users">GET</a></li>
+               
+                
+              </ul>
+            </li>
+            <li class="nav-link services">
+              <a href="">COMMENTS 📝</a>
+              <ul class="drop-down">
+             
+                <li><a href="http://localhost:3000/comments">GET</a></li>
+            
+             
+              </ul>
+            </li>
+          </ul>
+        </nav>
+      </div>
+    <div class="title">
+      <h1>Create a New Resource</h1>
     </div>
-    <h1>Create a New Resource</h1>
+    <div class="form-stuff">
+      <form method="POST" action="/resources">
+        <label for="title">Title:</label><br />
+        <input
+          type="text"
+          id="title"
+          name="title"
+          required
+          pattern="^.{3,10}$"
+          title="Title must be 3–10 characters long. Regex added here..."
+        /><br /><br />
+        <label for="description">Description:</label><br />
+        <textarea
+          id="description"
+          name="description"
+          rows="4"
+          pattern="^.{5,100}$"
+          title="Must be at least 5 character to 100 characters. Regex added here.."
+          required
+        ></textarea>
 
-    <form method="POST" action="/resources">
-      <label for="title">Title:</label><br />
-      <input
-        type="text"
-        id="title"
-        name="title"
-        required
-        pattern="^.{3,10}$"
-        title="Title must be 3–10 characters long. Regex added here..."
-      /><br /><br />
-      <label for="description">Description:</label><br />
-      <textarea
-        id="description"
-        name="description"
-        rows="4"
-        pattern="^.{5,100}$"
-        title="Must be at least 5 character to 100 characters. Regex added here.."
-        required
-      ></textarea>
+        <br /><br />
 
-      <br /><br />
+        <label for="authorId">Author ID:</label><br />
+        <input
+          type="number"
+          id="authorId"
+          name="authorId"
+          required
+        /><br /><br />
+        <br /><br />
 
-      <label for="authorId">Author ID:</label><br />
-      <input type="number" id="authorId" name="authorId" required /><br /><br />
-      <br /><br />
-
-      <button type="submit">Submit Resource</button>
-    </form>
+        <button type="submit">Submit Resource</button>
+      </form>
+    </div>
   </body>
 </html>
